# material2

./: CHANGELOG.md  mdc-copy-packages.js  package-lock.json  package.json  packages.bzl
.github/: CODEOWNERS
src/cdk-experimental/testing/: component-harness.ts  harness-environment.ts
src/cdk/private/testing/: BUILD.bazel  test-zone-helpers.spec.ts  test-zone-helpers.ts
src/cdk/stepper/: stepper.ts
src/cdk/table/: table.ts
src/cdk/table-inline-edit/: BUILD.bazel  inline-edit-module.ts  inline-edit.ts  public-api.ts  tsconfig-build.json
src/cdk/testing/: BUILD.bazel  harness-environment.ts
src/components-examples/: BUILD.bazel  package.json  tsconfig.json
src/components-examples/material/button/: BUILD.bazel
src/components-examples/material/button/button-harness/: button-harness-example.spec.ts  button-harness-example.ts
src/demo-app/: demo-material-module.ts  system-config.ts  theme.scss
src/demo-app/checkbox/: checkbox-demo.html  checkbox-demo.ts
src/demo-app/sidenav/: sidenav-demo.html  sidenav-demo.scss  sidenav-demo.ts
src/demo-app/virtual-scroll/: virtual-scroll-demo.html  virtual-scroll-demo.scss  virtual-scroll-demo.ts
src/dev-app/: BUILD.bazel  material-module.ts  system-config.ts  theme.scss
src/dev-app/cdk-experimental-listbox/: cdk-listbox-demo.html  cdk-listbox-demo.ts
src/dev-app/cdk-experimental-menu/: cdk-menu-demo.html
src/dev-app/checkbox/: checkbox-demo.html  checkbox-demo.ts
src/dev-app/datepicker/: datepicker-demo.ts
src/dev-app/mdc-checkbox/: mdc-checkbox-demo-module.ts
src/dev-app/stepper/: stepper-demo-module.ts  stepper-demo.html  stepper-demo.ts
src/dev-app/tree/: tree-demo-module.ts
src/e2e-app/: BUILD.bazel  system-config.ts  theme.scss
src/e2e-app/button/: button-e2e-module.ts  button-e2e.html
src/e2e-app/mdc-checkbox/: mdc-checkbox-e2e-module.ts
src/lib/: public-api.ts
src/lib/checkbox/: _checkbox-theme.scss  checkbox.ts  public-api.ts
src/lib/checkbox-mdc/: BUILD.bazel  _checkbox-theme.scss  checkbox-mdc.html  checkbox-mdc.scss  checkbox-module.ts  checkbox.spec.ts  checkbox.ts  public-api.ts  tsconfig-build.json
src/lib/datepicker/: calendar-body.spec.ts  calendar-body.ts  calendar.ts  datepicker-input.ts  datepicker.ts  (+1 more)
src/material-examples/: material-module.ts
src/material-experimental/: BUILD.bazel  package.json  public-api.ts  tsconfig.json
src/material-experimental/mdc/: BUILD.bazel
src/material-experimental/mdc/base/: base.ts
src/material-experimental/mdc/checkbox/: BUILD.bazel  _checkbox-theme.scss  checkbox.html  checkbox.scss  checkbox.spec.ts  checkbox.ts  index.ts  module.ts
src/material-experimental/mdc/ripple/: module.ts  ripple.ts
src/universal-app/: theme.scss  tsconfig-build.json  tsconfig-prerender.json  tsconfig.json
test/: karma-system-config.js  karma-test-shim.js  karma.conf.js
tools/: sass_bundle.ts
tools/package-tools/: rollup-globals.ts
(+59 files in other folders)
