package(default_visibility=["//visibility:public"])

load("//tools:defaults.bzl", "ng_module")

ng_module(
  name = "table-inline-edit",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/cdk/table-inline-edit",
  deps = [
    "@angular//packages/common",
    "@angular//packages/core",
    "@rxjs",
    "@rxjs//operators",
    "//src/cdk/overlay",
    "//src/cdk/portal",
  ],
)
