load("//tools:defaults.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "button",
    srcs = glob(["**/*.ts"]),
    assets = glob([
        "**/*.html",
        "**/*.css",
    ]),
    module_name = "@angular/components-examples/material/button",
    deps = [
        "//src/material/button",
        "//src/material/divider",
        "//src/material/icon",
        "//src/cdk/testing",
        "//src/cdk/testing/testbed",
        "//src/material/button/testing",
        "@npm//@angular/platform-browser",
        "@npm//@angular/platform-browser-dynamic",
    ],
)

filegroup(
    name = "source-files",
    srcs = glob([
        "**/*.html",
        "**/*.css",
        "**/*.ts",
    ]),
)
